# cmake-starter

./: .gitignore  CMakeLists.txt  header.h  main.cpp  other.cpp  readme.md
